# fullstack-workshop

./: Makefile.toml  tailwind.config.js
backend/: Cargo.toml
backend/src/: controllers.rs  database.rs  main.rs
frontend/: Cargo.toml  Dioxus.toml  input.css  tailwind.config.js
frontend/public/: tailwind.css
frontend/src/: components.rs  controllers.rs  main.rs
model/: Cargo.toml
