[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5.1", features = ["web"] }
manganis = "0.2.2"
model = { version = "0.1.0", path = "../model" }
reqwest = { version = "0.12.4", features = ["json"] }
